# voletu

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts  rustfmt.toml
.cargo/: config.toml
deploy/: Dockerfile.frontend  Dockerfile.server  README.md  docker-compose.quick.yml  docker-compose.yml  entrypoint-frontend.sh  nginx.conf.template
scripts/: coverage.mjs  er-diagram.mjs
