[workspace]
resolver = "2"
members = [
  "packages/core",
  "packages/core-macros",
  "packages/server",
  "packages/desktop",
]

[workspace.dependencies]
tokio = { version = "1.50", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "net",
  "time",
  "signal",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

axum = { version = "0.8", default-features = false, features = [
  "http1",
  "json",
  "query",
  "matched-path",
  "tokio",
  "macros",
] }
tower = { version = "0.5" }
tower-http = { version = "0.6", default-features = false, features = [
  "trace",
  "cors",
] }
utoipa = { version = "5", default-features = false, features = [
  "axum_extras",
  "chrono",
  "uuid",
] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

sea-orm = { version = "2.0.0-rc.37", features = [
  "sqlx-all",
  "with-uuid",
  "runtime-tokio-rustls",
  "schema-sync",
  "entity-registry",
] }

chrono = { version = "0.4.44", default-features = false, features = [
  "std",
  "serde",
] }
uuid = { version = "1.22", features = ["v7", "serde"] }

tauri = { version = "2.10.3" }
tauri-plugin-opener = "2"
anyhow = "1.0.102"
thiserror = "2"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

validator = { version = "0.20", features = ["derive"] }
axum-valid = { version = "0.24", features = ["validator"] }
argon2 = "0.5"
jsonwebtoken = { version = "10", default-features = false, features = [
  "rust_crypto",
] }

# required for SQL cipher support
libsqlite3-sys = { version = "0.30", default-features = false, features = [
  "bundled-sqlcipher-vendored-openssl",
] }

confy = "2"

dotenvy = "0.15"

keyring = { version = "3", features = ["windows-native"] }
rand = "0.10"
base64 = "0.22"
rust_decimal = { version = "1", features = ["serde-with-str"] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
] }
strum = { version = "0.28", features = ["derive"] }
